--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastai==2.1.7
-torch==1.7.0
-torchvision==0.8.1
-Flask==1.1.2
-Flask-Cors==3.0.9
+torch== 1.13.1
+torchvision==0.14.1
+fastai==2.7.12
+Flask
+Flask-Cors
+pillow
